feat: add user delete method
